--- a/scss/all_blocks/_all-blocks.scss
+++ b/scss/all_blocks/_all-blocks.scss
@@ -1,3 +1,11 @@
 @import "variables";
 @import "container";
+@import "button";
+@import "main";
 @import "header";
+@import "award";
+@import "courses";
+@import "servises";
+@import "project";
+@import "footer";
+
